--- a/Lab 2 Demo/index.html
+++ b/Lab 2 Demo/index.html
@@ -12,6 +12,23 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quas debitis ullam, beatae labore vel repellendus illo quod quisquam ad voluptate explicabo maxime possimus asperiores facere mollitia cupiditate nam sunt.</p>
 
-    <ing src"" alt "snowy town and ocean view" width="" height=""
+    <ing src" alt " Snowy town and ocean view" width="" height=""
+
+    <a href="https://fender.com" target="_blank">Fender Guitars</a>
+
+    <h4>Favorite Guitar</h4>
+
+    <ol>
+        <li>Custom 24</li>
+        <li>Fender strat</li>
+        <li>Washburn</li>
+    </ol>
+
+    <ul>
+        <li>Custom 24</li>
+        <li>Fender strat</li>
+        <li>Washburn</li>
+    </ul>
+    
 </body>
 </html>
