--- a/Lab 2/index.html
+++ b/Lab 2/index.html
@@ -17,7 +17,7 @@
 
         <a href="https://unsplash.com/" target="_blank">Traveling</a><br><br>
 
-        <img src="images/oceanview.webp" alt="ocean view">
+        <img src="images/oceanview.tiff" alt="ocean view">
 
 
         <h3>Some things I love</h3>
