--- a/Lab 2/index.html
+++ b/Lab 2/index.html
@@ -11,9 +11,9 @@
         <h3>When traveling I love to go to places with oceans</h3>
         <h4>I love traveling because that means I spend a lot of time with family</h4>
       
-        <p>I love to travel. When traveling I have always loved going to places with an ocean! I love sitting in chairs on the shore and sun bathing while the waves crash into my feet. It is one of the best feelings becasue it only happens around two times a year. Even though you have to keep a look out for sharks me and my family love buggie boarding, its one of our favorite things to do.</p>
+        <p>I love to travel. When traveling I have always loved going to places with an ocean! I love sitting in chairs on the shore and sun bathing while the waves crash into my feet. It is one of the best feelings becasue it only happens around two times a year. Even though you have to keep a look out for sharks me and my family love boogie boarding, its one of our favorite things to do.</p>
 
-        <p>The best thing about traveling is spending time with your family and to just get away with them for a week or how ever long you travel for. Getting away from the real world and not stress about everything you normally stress about is amazing. You even get to see new places and eat a different places you dont eat at everyday back at home.</p>
+        <p>The best thing about traveling is spending time with your family and to just get away with them for a week or how ever long you travel for. Getting away from the real world and not stressing about everything you normally stress about is amazing. You even get to see new places and eat a different restaurants you dont eat at everyday back at home.</p>
 
         <a href="https://unsplash.com/" target="_blank">Traveling</a><br><br>
 
