--- a/midterm demo/index.html
+++ b/midterm demo/index.html
@@ -14,7 +14,7 @@
     </header>
     <div id="container">
     <nav>
-        <a href="index.html">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a href="about.html">About Volleyball</a>
         <a href="screenshots.html">Screnshots</a>
         <a href="classes.html">Classes</a>
@@ -23,7 +23,7 @@
         <h1>Welcome to The Rules of Volleyball</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod in deserunt omnis dolore. Nobis, ratione amet iure laudantium similique, optio numquam tempora aspernatur architecto inventore rem ut laborum fugit rerum!</p>
 
-        <img src="images/photo-1592656094267-764a45160876.webp" alt="volleyball">
+        <img class="volley" src="images/photo-1592656094267-764a45160876.webp" alt="volleyball">
         
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt id placeat similique unde! Quod, neque? Possimus, deleniti. Totam voluptate sapiente saepe possimus consequatur placeat minus labore distinctio. Ex, expedita distinctio?</p>
         
