--- a/Mid-term/about.html
+++ b/Mid-term/about.html
@@ -15,20 +15,22 @@
         <img src="images /court.webp" alt="volleyball court">
     </header>
     <nav>
-        <a class="active" href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="index.html">Home</a>
+        <a class="active" href="about.html">About</a>
         <a href="gallery.html">Gallery</a>
         <a href="types.html">Types</a>
         <a href="contact.html">Contact</a>
     </nav>
     <main>
-        <h1>Introduction to Volleyball</h1>
+        <h1>Rules of the Game</h1>
 
         <p>Volleyball is not for everyone. However, if you practice and are interested in the game you can become amazing! Some key reminders are to not give up. It can and will be very frustrating in the begining. Your daughter or son will be whining about how their arms hurt or how they can't serve the ball over or how they don't know the right timing or approach for hitting the ball. But, with pratice makes perfect. </p>
 
-        <p>There are some key components for volleyball and that is serving, passing, setting, hitting, and blocking. Some kids can play all these positions and others can not, but don't them get discouraged for not being able to play certain positions. You can only have six people on the court at once. If a child is shorter they are normally a back row player which involves them passing the ball and serve receiving. If your child is taller they will most likely play on the front row as a hitter or blocker. However, setters are a special and important player on the team. They are like a quarterback on a football team, they are the person who is quick and will let the front row hit the ball and possibly get a point for your team.</p>
+        <p>Some simple rules of the game are you can only have six players on your side of the court at all times. You are allowed to sub new players in but once one new player come in one must leave. You only get three touches of the ball on your side before the ball must go over the net for the other team to play their offense. If you touch the ball more than three times it's the other teams point automatically. </p>
 
-        <img src="images /fullcourt.webp" alt="full court">
+        <p>There is a special type of player in the game besides the setter and she is called the libero. This player will wear a different color jersey than everyone else and can ONLY play back row. When she comes into the game her subs do not penalize you. This player is the best backrow player you will have.   </p>
+        
+        <img src="images /down&ready.webp" alt="down and ready">
     </main>
     <footer>
         &copy; 2021 Mid-term - <a href="https://www.strength-and-power-for-volleyball.com/basic-volleyball-rules.html" target="_blank">Volleyball</a>
