--- a/Mid-term/about.html
+++ b/Mid-term/about.html
@@ -12,7 +12,7 @@
     <div id="container">
     
     <header>
-        <img src="images /court.webp" alt="volleyball court">
+        <img src="images/court.webp" alt="volleyball court">
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -24,13 +24,13 @@
     <main>
         <h1>Rules of the Game</h1>
 
-        <p>Volleyball is not for everyone. However, if you practice and are interested in the game you can become amazing! Some key reminders are to not give up. It can and will be very frustrating in the begining. Your daughter or son will be whining about how their arms hurt or how they can't serve the ball over or how they don't know the right timing or approach for hitting the ball. But, with pratice makes perfect. </p>
+        <p>&nbsp; Volleyball is not for everyone. However, if you practice and are interested in the game you can become amazing! Some key reminders are to not give up. It can and will be very frustrating in the begining. Your daughter or son will be whining about how their arms hurt or how they can't serve the ball over or how they don't know the right timing or approach for hitting the ball. But, with pratice makes perfect. </p>
 
-        <p>Some simple rules of the game are you can only have six players on your side of the court at all times. You are allowed to sub new players in but once one new player come in one must leave. You only get three touches of the ball on your side before the ball must go over the net for the other team to play their offense. If you touch the ball more than three times it's the other teams point automatically. </p>
+        <p>&nbsp; Some simple rules of the game are you can only have six players on your side of the court at all times. You are allowed to sub new players in but once one new player come in one must leave. You only get three touches of the ball on your side before the ball must go over the net for the other team to play their offense. If you touch the ball more than three times it's the other teams point automatically. </p>
 
-        <p>There is a special type of player in the game besides the setter and she is called the libero. This player will wear a different color jersey than everyone else and can ONLY play back row. When she comes into the game her subs do not penalize you. This player is the best backrow player you will have.   </p>
+        <p>&nbsp; There is a special type of player in the game besides the setter and she is called the libero. This player will wear a different color jersey than everyone else and can ONLY play back row. When she comes into the game her subs do not penalize you. This player is the best backrow player you will have.   </p>
         
-        <img src="images /down&ready.webp" alt="down and ready">
+        <img src="images/down&ready.webp" alt="down and ready">
     </main>
     <footer>
         &copy; 2021 Mid-term - <a href="https://www.strength-and-power-for-volleyball.com/basic-volleyball-rules.html" target="_blank">Volleyball</a>
