--- a/Mid-term/contact.html
+++ b/Mid-term/contact.html
@@ -12,7 +12,7 @@
     <div id="container">
     
     <header>
-        <img src="images /court.webp" alt="volleyball court">
+        <img src="images/court.webp" alt="volleyball court">
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -24,7 +24,21 @@
     <main>
         <h1>Contact Information</h1>
 
-       
+        <p>&nbsp; For more information you can click the link below to see if this is the right fit for you.</p>
+        <a href="https://www.britannica.com/sports/volleyball" target="_blank">History and rules of volleyball</a>
+
+        <p>&nbsp; To get in touch with myself for further information you can contact me through the link via email and I can back to you within the day. </p>
+
+        <p><a href="mailto:dlrawiszer@icloud.com">Click here to send email</a></p>
+
+        <p>&nbsp; Below are websites to local clubs that you can aquire more information from and potentially become a member of the family!</p>
+
+        <ul>
+            <li><a href="https://www.sceniccityvbclub.com" target="_blank">Scenic City Volleyball Club</a></li>
+            <li><a href="https://a5chattanooga.com" target="_blank">A5 Chattanooga Volleyball Club</a></li>
+            <li><a href="https://www.c4volleyballclub.com" target="_blank">C4 Explosive Volleyball Club</a></li>
+        </ul>
+
     </main>
     <footer>
         &copy; 2021 Mid-term - <a href="https://www.strength-and-power-for-volleyball.com/basic-volleyball-rules.html" target="_blank">Volleyball</a>
