--- a/Mid-term/gallery.html
+++ b/Mid-term/gallery.html
@@ -12,7 +12,7 @@
     <div id="container">
     
     <header>
-        <img src="images /court.webp" alt="volleyball court">
+        <img src="images/court.webp" alt="volleyball court">
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -24,17 +24,17 @@
     <main>
         <h1>Gallery Wall</h1>
 
-        <img src="images /hitting.webp" alt="hitting the ball">
-        <p>This is what an approach and hitting the ball looks like.</p>
+        <img src="images/hitting.webp" alt="hitting the ball">
+        <p>&nbsp; This is what an approach and hitting the ball looks like.</p>
 
-        <img src="images /battleathenet.webp" alt="battle at the net">
-        <p>This is a battle at the net. This means both sides are trying to prevent the ball from coming on their side.</p>
+        <img src="images/battleathenet.webp" alt="battle at the net">
+        <p>&nbsp; This is a battle at the net. This means both sides are trying to prevent the ball from coming on their side.</p>
 
-        <img src="images /poolvball.webp" alt="pool volleyball">
-        <p>Volleyball is not just an indoor or sand sport you can play volleyball anywhere as long as you have a ball.</p>
+        <img src="images/poolvball.webp" alt="pool volleyball">
+        <p>&nbsp; Volleyball is not just an indoor or sand sport you can play volleyball anywhere as long as you have a ball.</p>
 
-        <img src="images /celebrating.webp" alt="celebrating">
-        <p>A big thing in volleyball is celebration. Celebrating helps keep the momentum up.</p>
+        <img src="images/celebrating.webp" alt="celebrating">
+        <p>&nbsp; A big thing in volleyball is celebration. Celebrating helps keep the momentum up.</p>
     </main>
     <footer>
         &copy; 2021 Mid-term - <a href="https://www.strength-and-power-for-volleyball.com/basic-volleyball-rules.html" target="_blank">Volleyball</a>
