--- a/Mid-term/types.html
+++ b/Mid-term/types.html
@@ -12,7 +12,7 @@
     <div id="container">
     
     <header>
-        <img src="images /court.webp" alt="volleyball court">
+        <img src="images/court.webp" alt="volleyball court">
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -24,11 +24,18 @@
     <main>
         <h1>Types of Volleyball</h1>
 
-        <p>There are several types of volleyball. There is indoor volleyball, which you see more often. There is beach volleyball, which is more difficult and normally played with two people rather than six. Then there is club volleyball, which you play when school ball is not in session and just to keep a ball in your hands during the off season. Club ball is my personal favorite because you meet new people you don't play with at school and you get to travel to new cities to play at tournaments. The only difference between club ball and school ball is you have to pay money for club and you travel to new places unlike school ball. In school ball you play who is in your district but for the most part stay in your city. </p>
+        <ul>
+            <li>Beach Volleyball</li>
+            <li>Club Volleyball</li>
+            <li>Indoor Volleyball</li>
 
-        <p>You can play volleyball anywhere you desire as long as you have at least two people. You can play in your driveway, an actual volleball court, at the beach in the sand, and the pool. Each setting allows you to perfect your game because they are all different. The rules stay the same but playing on sand is much more difficult; and not just because there are only two people. </p>
+        </ul>
 
-        <img src="images /settingtheball.webp" alt="setting the ball">
+        <p>&nbsp; There are several types of volleyball. There is indoor volleyball, which you see more often. There is beach volleyball, which is more difficult and normally played with two people rather than six. Then there is club volleyball, which you play when school ball is not in session and just to keep a ball in your hands during the off season. Club ball is my personal favorite because you meet new people you don't play with at school and you get to travel to new cities to play at tournaments. The only difference between club ball and school ball is you have to pay money for club and you travel to new places unlike school ball. In school ball you play who is in your district but for the most part stay in your city. </p>
+
+        <p>&nbsp; You can play volleyball anywhere you desire as long as you have at least two people. You can play in your driveway, an actual volleball court, at the beach in the sand, and the pool. Each setting allows you to perfect your game because they are all different. The rules stay the same but playing on sand is much more difficult; and not just because there are only two people. </p>
+
+        <img src="images/settingtheball.webp" alt="setting the ball">
     </main>
     <footer>
         &copy; 2021 Mid-term - <a href="https://www.strength-and-power-for-volleyball.com/basic-volleyball-rules.html" target="_blank">Volleyball</a>
