--- a/Mid-term/contact.html
+++ b/Mid-term/contact.html
@@ -27,7 +27,7 @@
         <p>&nbsp; For more information you can click the link below to see if this is the right fit for you.</p>
         <a href="https://www.britannica.com/sports/volleyball" target="_blank">History and rules of volleyball</a>
 
-        <p>&nbsp; To get in touch with myself for further information you can contact me through the link via email and I can back to you within the day. </p>
+        <p>&nbsp; To get in touch with myself for further information you can contact me through the link via email and I can get back to you within the day. </p>
 
         <p><a href="mailto:dlrawiszer@icloud.com">Click here to send email</a></p>
 
