--- a/Lab 6/breeds.html
+++ b/Lab 6/breeds.html
@@ -49,13 +49,13 @@
             <hr>
             <img src="images/Yorkshire.webp" alt="Yorkshire">
 
-            <p>&nbsp; Yorkshire Terrier also known as a Yorkie are known for being lap dogs. Since they are smaller dogs they don't require a hude amount of space or exercise, which makes them great dogs if you live in an apartment or an older couple. Yorkies are happiest when they are perched on thier owner's lap or nearby their owners. But, most importantly they love physical contact. </p>
+            <p>&nbsp; Yorkshire Terrier also known as a Yorkie are known for being lap dogs. Since they are smaller dogs they don't require a huge amount of space or exercise, which makes them great dogs if you live in an apartment or an older couple. Yorkies are happiest when they are perched on their owner's lap or nearby their owners. But, most importantly they love physical contact. </p>
 
             <h3>Beagle</h3>
             <hr>
             <img src="images/beagle.webp" alt="beagle">
 
-            <p>&nbsp; Beagles are known for their sence of smell, which means they love nature. Beagles are a good dog to have to make you get out of the house and explore the outdoors. Beagles possess a personality that includes either active and energetic or cuddly and calm. </p>
+            <p>&nbsp; Beagles are known for their sense of smell, which means they love nature. Beagles are a good dog to have to make you get out of the house and explore the outdoors. Beagles possess a personality that includes either active and energetic or cuddly and calm. </p>
 
             <h3>Dachshund</h3>
             <hr>
