--- a/Lab 6/contact.html
+++ b/Lab 6/contact.html
@@ -43,7 +43,7 @@
 
             <p><a href="https://www.betterhelp.com/helpme/?utm_source=AdWords&utm_medium=Search_PPC_c&utm_term=mental+health+hotline_e&utm_content=34236704056&network=g&placement=&target=&matchtype=e&utm_campaign=384672130&ad_type=text&adposition=&gclid=Cj0KCQjw9YWDBhDyARIsADt6sGaYtkZb-sk9rpDsVKKI9oUoWg2WdE3OdwskM0UqloFVZbvEewAKHeIaAuvmEALw_wcB&not_found=1&gor=helpme"> Mental Health Hotline</a></p>
 
-            <img src="images/puplove.webp">
+            <img src="images/puplove.webp" alt="puppy love">
         </section>
         
     </main>
