--- a/Final/gallery.html
+++ b/Final/gallery.html
@@ -70,8 +70,8 @@
                 <p> &nbsp; We always want to have fun at our shop but want to make sure we are doing everything to make the customers want to come back and we do this by:</p>
 
                 <ul>
-                    <li>Listen to music while baking</li>
-                    <li>Have good customer service</li>
+                    <li>Listening to music while baking</li>
+                    <li>Having good customer service</li>
                     <li>Making sure our store is clean and sanitary</li>
                 </ul>
                 
