--- a/Final/index.html
+++ b/Final/index.html
@@ -63,6 +63,6 @@
         <footer>
             <p>&copy; 2021 Final - Dakota's Bakery - <a href="https://sallysbakingaddiction.com/top-10-baking-tips/" target="_blank">Baking Tips</a></p>
         </footer>  
-    
+    </div>
 </body>
 </html>
